--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 layout: home
 paginate: true
 alt_title: "Cory Serratore"
-sub_title: "Confronting insurmountable opportunities daily"
+sub_title: ""
 image: /assets/images/hero_IMG_20170703_194810638.jpg
 ---
