--- a/solve-problems/index.html
+++ b/solve-problems/index.html
@@ -86,8 +86,7 @@
 <p>The solution is <em>how</em> you solve the problem. This is where you apply your expertise to model a solution that</p>
 <ol>
 <li>Meets the <em>objectives</em></li>
-<li>Addresses the <em>problem</em></li>
-<li>Complies with the <em>forces</em></li>
+<li>Addresses the <em>problem</em>3. Complies with the <em>forces</em></li>
 <li>Considers the <em>context</em></li>
 </ol>
 <p>Consider this a solution checklist. The more clearly you are able to trace your solution decisions back to these checklist items, the more clearly you will be able to understand and communicate the solution, and rationalise it and defend it, if necessary. It will be much easier to sway opinions in your favour when you've laid out your solution in a manner that clearly explains how it addresses each of the requester's concerns.</p>
@@ -137,7 +136,7 @@
 </ul>
 <h2>To Wrap Things Up</h2>
 <p>This article defines a method and framework to help bridge the communication gap between the problem space and solution space stakeholders.</p>
-<p>It also encourages fosters a practice and discipline for taking a top-down approach to solution development, by focusing on solving a problem instead of forcing a problem to fit a solution.</p>
+<p>It also fosters a practice and discipline for taking a top-down approach to solution development, by focusing on solving a problem instead of forcing a problem to fit a solution.</p>
 <p>A problem-solving approach fosters empathy and develops domain knowledge through the perspective of the problem space.</p>
 <p>Technology is ephemeral and constantly subject to evolution, deprecation, and obsolescence. Insight and knowledge of the problem domain is a more durable asset that transcends technology decisions.</p>
 <p>Lastly, this method documents not only the solution (the how), but the reasoning (the what, when, and why) behind the solution design decisions. This is critical information for subsequent changes, which otherwise may be based on incorrect assumptions, or may require re-discovery of the problem and solution space considerations.</p>
@@ -147,4 +146,4 @@
           >
             window.___chunkMapping="{\"app\":[\"/app-127f0047523529b388ce.js\"],\"component---src-pages-404-js\":[\"/component---src-pages-404-js-c6b521550f3a330e3b83.js\"],\"component---src-pages-index-js\":[\"/component---src-pages-index-js-baf4b84f85791e2c3f33.js\"],\"component---src-pages-markdown-remark-frontmatter-slug-jsx\":[\"/component---src-pages-markdown-remark-frontmatter-slug-jsx-d0b699401aa9c432ef4a.js\"]}";
           </script>
-        <script>window.___webpackCompilationHash="6c125520c181ff6721e2";</script><script src="/webpack-runtime-0c19d22e8f0455361fa6.js" async></script><script src="/framework-4c83fa99e4da88cbeb4c.js" async></script><script src="/app-127f0047523529b388ce.js" async></script><!-- slice-end id="_gatsby-scripts-1" --></body></html>
+        <script>window.___webpackCompilationHash="76c26c34d331186aca47";</script><script src="/webpack-runtime-0c19d22e8f0455361fa6.js" async></script><script src="/framework-4c83fa99e4da88cbeb4c.js" async></script><script src="/app-127f0047523529b388ce.js" async></script><!-- slice-end id="_gatsby-scripts-1" --></body></html>
