--- a/_gatsby/slices/_gatsby-scripts-1.html
+++ b/_gatsby/slices/_gatsby-scripts-1.html
@@ -2,6 +2,6 @@
           <script
             id="gatsby-chunk-mapping"
           >
-            window.___chunkMapping="{\"app\":[\"/app-127f0047523529b388ce.js\"],\"component---src-pages-404-js\":[\"/component---src-pages-404-js-c6b521550f3a330e3b83.js\"],\"component---src-pages-index-js\":[\"/component---src-pages-index-js-7e8df96d69f6e7344372.js\"],\"component---src-pages-markdown-remark-frontmatter-slug-jsx\":[\"/component---src-pages-markdown-remark-frontmatter-slug-jsx-31c8f9a9654af08958b1.js\"]}";
+            window.___chunkMapping="{\"app\":[\"/app-c2938075983e832b3556.js\"],\"component---src-pages-404-js\":[\"/component---src-pages-404-js-c6b521550f3a330e3b83.js\"],\"component---src-pages-index-js\":[\"/component---src-pages-index-js-22e12d6f7eaa84ef9802.js\"],\"component---src-pages-markdown-remark-frontmatter-slug-jsx\":[\"/component---src-pages-markdown-remark-frontmatter-slug-jsx-51acef6733b18b4698d7.js\"],\"component---src-pages-subscribe-js\":[\"/component---src-pages-subscribe-js-09644fb1d7b3ed5c1091.js\"]}";
           </script>
-        <script>window.___webpackCompilationHash="1223ea7576f2b4c2d181";</script><script src="/webpack-runtime-9aba699564813cfd342e.js" async></script><script src="/framework-4c83fa99e4da88cbeb4c.js" async></script><script src="/app-127f0047523529b388ce.js" async></script>
+        <script>window.___webpackCompilationHash="2f300ea38e58ffc8f92c";</script><script src="/webpack-runtime-897a1e62fc88a20619e0.js" async></script><script src="/framework-4c83fa99e4da88cbeb4c.js" async></script><script src="/app-c2938075983e832b3556.js" async></script>
