--- a/data-is-currency/index.html
+++ b/data-is-currency/index.html
@@ -4,8 +4,7 @@
 <p>An objective of every software system is to generate value, in the form of data representing the solution to a problem.</p>
 <p>Therefore, an objective of every software system is to maximize the value it generates - the return on investment (ROI) in building the software - by maximizing value it generates for each problem it solves and maximizing the number of problems it solves.</p>
 <p>This formula,</p>
-<pre><code>max(value per problem solved) x max(number of problems solved)
-</code></pre>
+<p><code>max(value per problem solved) x max(number of problems solved)</code></p>
 <p>is the value potential of a software system.</p>
 <h2>Software Is A Betting Game</h2>
 <p>Software development is a relentless and unforgiving treadmill of placing high-risk bets on the ability to identify and solve client problems.</p>
@@ -26,7 +25,6 @@
 <p>However, there is the fundamental question of how software organizations tend to view ROI.</p>
 <p>In many cases, they are failing to deliver their full value potential - by a large margin, possibly orders of magnitude.</p>
 <p>A lot of this value potential, in the form of data, is left on the table or, more apt, stuffed under the mattress and forgotten about.</p>
-<p>Let's consider data as a currency.</p>
 <p>Our economy, in a grossly simplified form...</p>
 <ol>
 <li>A bank accepts a deposit from a customer, say $100.</li>
