--- a/data-is-currency/index.html
+++ b/data-is-currency/index.html
@@ -104,14 +104,14 @@
 </li>
 </ol>
 <h2>The Payback</h2>
-<p>An organization that embraces data mesh principles will have a distinctive and unfair advantage over their competitors that do not.</p>
+<p>An organization that embraces data mesh principles will have a distinct advantage over their competitors.</p>
 <p>Silos that previously impeded integration and collaboration between product teams fall.</p>
 <p>Instead of highly coupled integrations that require high-bandwidth communication and coordination between teams, integration becomes much more passive and autonomous.</p>
 <p>Downstream consumers can simply opt-in and tap into existing data streams and decide if and how they can leverage it to add value.</p>
 <p>A free flow and exchange of data removes the barriers of discovery and awareness of what is available and what is possible.</p>
 <p>Value potential that was previously buried under product teams' mattresses is now unlocked and can be realized by facilitating experimentation and innovation.</p>
 <h2>Risks and Mitigation</h2>
-<p>Of course, nothing is free. Free markets thrive because they rely on a strong foundation of principles and policies. Consideration for all four data mesh principles are important to the success of a data mesh strategy.</p>
+<p>Free markets thrive because they rely on a strong foundation of principles and policies. Consideration for all four data mesh principles are important to the success of a data mesh strategy.</p>
 <p>Without domain-oriented data ownership and architecture, you risk the inefficient dependency and bureaucracy of a centralized business intelligence team. You also lose accountability for data quality and change management, impacting the quality and resilience of downstream consumers, and the value they are able to deliver.</p>
 <p>Without a commitment to data as a product, data will continue to be treated as an afterthought and the potential of data mesh will be unrealized and the initiative runs the risk of withering on the vine.</p>
 <p>Without a focus on a self-serve data infrastructure as a platform, frictions for sharing and consuming data may be sufficient to disincentive and de-prioritize such efforts. Again, the initiative may never gain traction.</p>
