--- a/data-is-currency/index.html
+++ b/data-is-currency/index.html
@@ -136,7 +136,7 @@
 <p>Set your data free. It it has value, that value will return to you in multiples.
 —Cory Serratore</p>
 </blockquote>
-<p>If you like this kind of thing, consider following me on Twitter, where I provide bit-sized tidbits of my thoughts and experiences on topics I am passionate (or just curious) about, such as:</p>
+<p>If you like this kind of thing, consider following me on Twitter, where I provide bite-size thoughts and experiences on topics I am passionate (or just curious) about, such as:</p>
 <ul>
 <li>the digital creator economy</li>
 <li>building scalable software systems, teams, and organizations</li>
