--- a/data-is-currency/index.html
+++ b/data-is-currency/index.html
@@ -11,7 +11,7 @@
 <p>Based on a study by the Standish Group, only 11% of new application development projects reported a high return on investment (ROI).</p>
 <p>49% of new application projects fail to provide sustainable ROI.</p>
 <p>Statistics indicate the stakes are high and there is little margin for error.</p>
-<p>Consider the forces behind these each bet:</p>
+<p>Consider the forces behind each bet:</p>
 <ul>
 <li>Software systems require capital investment to build.</li>
 <li>Software systems incur ongoing operational costs to remain online.</li>
@@ -24,7 +24,7 @@
 <p>Most of these are focused on either improving the bets one places, or the execution on those bets.</p>
 <p>However, there is the fundamental question of how software organizations tend to view ROI.</p>
 <p>In many cases, they are failing to deliver their full value potential - by a large margin, possibly orders of magnitude.</p>
-<p>A lot of this value potential, in the form of data, is left on the table or, more apt, stuffed under the mattress and forgotten about.</p>
+<p>A lot of this value potential, in the form of data, is left on the table or stuffed under the mattress and forgotten about.</p>
 <p>Our economy, in a grossly simplified form...</p>
 <ol>
 <li>A bank accepts a deposit from a customer, say $100.</li>
