--- a/build-the-right-thing/index.html
+++ b/build-the-right-thing/index.html
@@ -12,7 +12,7 @@
 <p>Outclassed. Outmaneuvered.</p>
 <p>Beaten by competitors who seems to operate at another level.</p>
 <p>The loss stings.</p>
-<p>Having your defeat handed to you with so little effort on their is what hurts the most.</p>
+<p>Having your defeat handed to you with so little effort on their part is what hurts the most.</p>
 <p>How does this happen?</p>
 <p>The same way it did for the tourists in the story above. They faced off against opponents who were superior in both strategy and tactics.</p>
 <p>The odds were not only stacked against them. They were <em>multiplied</em> several times over.</p>
@@ -25,23 +25,23 @@
 <p>You're a software developer. You feel stuck on an endless technology treadmill. You've got a passion for learning. All that stands in your way is mastering this latest technology or design pattern.</p>
 <p>But the features keep coming in. The requirements seem to be all over the map, from one area of the product to another. There's so much breadth and depth to cover. Nobody on your team has a complete handle on everything.</p>
 <p>There are dark corners of your software that nobody feels confident in changing. The tech backlog is daunting.</p>
-<p>You're a CTO. You oversee the technology strategy of your organisation. You drive innovation. You manage technical teams. You align technology initiatives with the company's vision and goals.</p>
-<p>But there in't a clear alignment between business objectives and technology initiatives. To make matters worse, shiny object syndrome pervades the industry. Every six months, it seems there's another cycle towards one trend to another.</p>
+<p>You're a CTO. You oversee the technology strategy of your organization. You drive innovation. You manage technical teams. You align technology initiatives with the company's vision and goals.</p>
+<p>But there in't a clear alignment between business objectives and technology initiatives. To make matters worse, shiny object syndrome pervades the industry. Every six months, it seems there's another squirrel to chase.</p>
 <p>You're a business owner and creator. You're struggling to define your brand. Niche down, some say. Others tell you to generalize and that "you are the brand". You struggle to convey your value proposition and the focus of your content.</p>
 <p>There's so much conflicting advice:</p>
-<p>"Just put something out there and see what sticks, and double down on that.".</p>
+<p>"Just put something out there and see what sticks, and double down on that."</p>
 <p>"Find a problem, solve a problem."</p>
 <p>Talk of pillars, values, mastery... it's all so confusing.</p>
 <p>But you keep posting content because consistency matters more than anything.</p>
 <p>Until one day you stop, because you're burned out and aren't seeing progress.</p>
 <p>Meanwhile, creators all around you are posting 0-1k, 5k, 10k follower growth. They're banking three, four, five figures in revenue per month.</p>
-<p>And every other business owner and creator seems to be ng just the right problem to solve. Their customers are eating it up. They're killing it.</p>
+<p>And every other business owner and creator seems to be finding just the right problem to solve. Their customers are eating it up. They're killing it.</p>
 <h2>It's Not You, It's You</h2>
 <p>"OK Cory, so what the hell is going on? What am I missing?", you are no doubt asking.</p>
 <p>Listen. It's not you.</p>
-<p>Well, it is, but you may very well be doing everything right, if not better, than everyone else.</p>
-<p>But you're not doing the right things.</p>
-<p>You're relying too much on tactics, but it's your strategy - or lack of one - that is failing you.</p>
+<p>Well, it is, but you may very well be executing on everything right, if not better, than everyone else.</p>
+<p>But you're not doing the right things. You're relying too much on tactics.</p>
+<p>But it's your strategy - or lack of one - that is failing you.</p>
 <h2>Strategy vs. Tactics</h2>
 <p>Strategy and tactics are two interconnected but distinct concepts. They're often used together. But they refer to different levels and aspects of planning and decision making.</p>
 <p>A strategy is a high-level and long-term plan. It strives to create a competitive advantage and to achieve a desired outcome.</p>
@@ -86,9 +86,9 @@
 <p>The other half believe the strategy - what you choose to build and why - are more important to the outcome.</p>
 <p>I have an opinion, and another story to share.</p>
 <h2>Being a Dope on the Ropes</h2>
-<p>The <em>Rumble in the Jungle</em> is "arguably the greatest sporting event of the 20th century".</p>
+<p>The <em>Rumble in the Jungle</em> is arguably the greatest sporting event of the 20th century.</p>
 <p>The setting was Zaire, Africa in 1974. It featured Muhammad Ali against undefeated and undisputed heavyweight champion George Foreman.</p>
-<p>The 32 year old Ali was coming in as a well-worn 4-1 underdog. His opponent was the younger heavy-hitting Foreman. Formane was renown for his punching power, size, and sheer physical dominance.</p>
+<p>The 32 year old Ali was coming in as a well-worn 4-1 underdog. He had spent the past 4 years climbing back into contention after his controversial exile in 1966 for refusing to enlist in the U.S. war in Vietnam. His opponent was the younger heavy-hitting Foreman. Foreman was renown for his punching power, size, and sheer physical dominance.</p>
 <p>Both fighters came into the match with a different game plan.
 Foreman had been training to cut off the ring. This would negate Ali's speed advantage and force him into a battle of punching power. A winning plan, as predicted by most who believed George would come out on top.</p>
 <p>Ali had a strategy of his own. Ali had been teasing his training staff and fans of a secret plan he had devised to counter Foreman.</p>
@@ -107,7 +107,7 @@ This had the intended effect of enraging Foreman. Foreman threw even harder and 
 <p>Ali had stunned his opponent on occasion with combinations. Still Foreman continued his barrage, but with decreasing impact.
 By the eight round, Foreman's fatigue began to show. Both his attacking and defensive ability diminished.</p>
 <p>Spotting the opportunity Ali was waiting for, he wasted no time in taking advantage.
-Ali, was once again pinned on the ropes. But Ali had plenty of attack power still in the tank. Ali pivoted and countered with a combination of hard right and left hooks that brought Foreman down to the canvas in a stunning victory.</p>
+Ali was once again pinned on the ropes, but had plenty of attack power still in the tank. Ali pivoted and countered with a combination of hard right and left hooks that brought Foreman down to the canvas in a stunning victory.</p>
 <p>George Foreman entered the match as the clear favourite. He had the tactical advantage and a predictable game plan.</p>
 <p>Yet, Muhammad Ali had devised a winning and flexible strategy. Ali not only neutralized, but countered his opponent's advantage.</p>
 <p>The two top contenders in the world. A classic example of speed and technical skills against raw power.  An example of how strategy would be the deciding factor in the outcome.</p>
@@ -115,7 +115,7 @@ Ali, was once again pinned on the ropes. But Ali had plenty of attack power stil
 <p>Too many businesses play the game like tourists at the Mirage in Vegas.</p>
 <p>Even those that aren't outmatched in tactics still fail to apply them effectively.</p>
 <p>Building the right thing in the right way by combining effective strategy with efficient tactics is a recipe for success.</p>
-<p>Here's what may surprise many of you.</p>
+<p>Here's what many fail to recognize:</p>
 <blockquote>
 <p>The more efficient you are at doing the wrong thing, the wronger you become.</p>
 <p>-- <cite>Dr. Russell Ackoff</cite></p>
@@ -167,7 +167,7 @@ Ali, was once again pinned on the ropes. But Ali had plenty of attack power stil
 <p>Fortunately, there are accepted strategic design practices and patterns that help businesses build effective solutions. They also tend to have qualities that improve the ability to build solutions more efficiently.</p>
 <p>These strategic design practices and patterns will be the subject of future installments of my Build The Right Thing email course on My Solution Space newsletter.</p>
 <p>If you've made it this far, thank you so much for your attention. I appreciate you.</p>
-<p>If you enjoyed this content, you will also enjoy following my Twitter content <a href="https://twitter.com/CorysDomain">@CorysDomain </a>.</p></div></article></div><div class="subscribe-module--subscribe--0fca2"><p>Are you a software developer looking to move beyond the ranks of commodity coders? Subscribe to <strong>The Solution Space</strong> and learn how to build a reputation as an <strong>irreplaceable problem solver</strong>.</p><form action=" https://buttondown.email/api/emails/embed-subscribe/CorySerratore " method="post" target="popupwindow" class="embeddable-buttondown-form"><input type="email" name="email" placeholder="your email address"/><input type="hidden" name="embed" value="1"/><input type="submit" value="Read For Free"/></form></div></main><footer>© All Rights Reserved</footer></div></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/build-the-right-thing/";/*]]>*/</script><!-- slice-start id="_gatsby-scripts-1" -->
+<p>If you enjoyed this content, you will also enjoy following my Twitter content at <a href="https://twitter.com/CorysDomain">@CorysDomain </a>.</p></div></article></div><div class="subscribe-module--subscribe--0fca2"><p>Are you a software developer looking to move beyond the ranks of commodity coders? Subscribe to <strong>The Solution Space</strong> and learn how to build a reputation as an <strong>irreplaceable problem solver</strong>.</p><form action=" https://buttondown.email/api/emails/embed-subscribe/CorySerratore " method="post" target="popupwindow" class="embeddable-buttondown-form"><input type="email" name="email" placeholder="your email address"/><input type="hidden" name="embed" value="1"/><input type="submit" value="Read For Free"/></form></div></main><footer>© All Rights Reserved</footer></div></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/build-the-right-thing/";/*]]>*/</script><!-- slice-start id="_gatsby-scripts-1" -->
           <script
             id="gatsby-chunk-mapping"
           >
